<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Generations</string>
    
    <string name="hc_prompt">Hair Color</string> 
    <string-array name="hc_array">
        <item>Brown</item>
        <item>Blonde</item>
        <item>Red</item>
    </string-array>
    
    <string name="ec_prompt">Eye Color</string> 
    <string-array name="ec_array">
        <item>Brown</item>
        <item>Hazel</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    
 	<string name="wp_prompt">Widows Peak</string> 
    <string-array name="wp_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    
    <string name="ce_prompt">Connected Earlobes</string> 
    <string-array name="ce_array">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    
    <string name="cc_prompt">Cleft Chin</string> 
    <string-array name="cc_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>    
    
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="scanning">scanning for devices</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_connected_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting</string>
    <string name="title_not_connected">not connected</string>

</resources>