<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/personBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:onClick="goBack"
            android:text="Back" />

        <Button
            android:id="@+id/personSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:onClick="savePerson"
            android:text="Save Person" />

        <EditText
            android:id="@+id/personName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:ems="10" />

        <Spinner
            android:id="@+id/spinnerHairColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/personBackButton"
            android:entries="@array/hc_array"
            android:prompt="@string/hc_prompt" />

        <Spinner
            android:id="@+id/spinnerEyeColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/spinnerHairColor"
            android:entries="@array/ec_array"
        	android:prompt="@string/ec_prompt" />

        <Spinner
            android:id="@+id/spinnerWidowsPeak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/spinnerEyeColor"
            android:entries="@array/wp_array"
        	android:prompt="@string/wp_prompt" />

        <Spinner
            android:id="@+id/spinnerConnectedEarlobes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/spinnerWidowsPeak"
            android:entries="@array/ce_array"
        	android:prompt="@string/ce_prompt" />

        <Spinner
            android:id="@+id/spinnerCleftChin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/spinnerConnectedEarlobes"
            android:entries="@array/cc_array"
        	android:prompt="@string/cc_prompt" />

        <TextView
            android:id="@+id/ecTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/spinnerEyeColor"
            android:layout_alignParentRight="true"
            android:text="Eye Color"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/hcTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/spinnerHairColor"
            android:layout_alignParentRight="true"
            android:text="Hair Color"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/wpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/spinnerWidowsPeak"
            android:layout_alignParentRight="true"
            android:text="Widows Peak"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/ceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/spinnerConnectedEarlobes"
            android:layout_alignParentRight="true"
            android:text="Connected Earlobes"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/ccTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/spinnerCleftChin"
            android:layout_alignParentRight="true"
            android:text="Cleft Chin"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

</LinearLayout>